syntax = "proto3";

package bestia;

option java_package = "net.bestia.message";
option java_outer_classname = "EntityProto";

message Entity {
    uint64 entity_id = 1;
}
